Revert "Merge branch 'redesign/integration', remote-tracking branch 'origin' into redesign/guides"
This reverts commit c280f925cafc80a62156df824b020b62560cee14, reversing
changes made to 3e62051a89e90c050ca3978cacd4cdc48d91dd59.

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -1978,40 +1978,131 @@ section.discourse-forum-page {
 
   /* Only apply gradients to containers within baton sections */
   .home section[class*="baton"] > .container::before,
-  .home section[class*="baton"] > .container::after,
-  .home header.baton-hero > .container::before,
-  .home header.baton-hero > .container::after {
+  .home section[class*="baton"] > .container::after {
     content: '';
     position: absolute;
     top: 0;
     bottom: -50px;
-    height: 1000px;
     width: 100px;
     pointer-events: none;
     z-index: 2;
   }
 
-  .home section[class*="baton"] > .container::before, .home .baton-hero > .container::before {
+  .home section[class*="baton"] > .container::before {
     left: -110px;
     background: linear-gradient(to right, #fff 0%, rgba(255, 255, 255,1) 50%, transparent 100%);
   }
 
-  .home section[class*="baton"] > .container::after, .home .baton-hero > .container::after {
+  .home section[class*="baton"] > .container::after {
     right: -110px;
     background: linear-gradient(to left, #fff 0%, rgba(255, 255, 255, 1) 50%, transparent 100%);
   }
 
-  [data-theme='dark'] .home section[class*="baton"] > .container::before, [data-theme='dark'] .home .baton-hero > .container::before {
+  [data-theme='dark'] .home section[class*="baton"] > .container::before {
     background: linear-gradient(to right, var(--ifm-background-color) 0%, var(--ifm-background-color) 50%, transparent 100%);
   }
 
-  [data-theme='dark'] .home section[class*="baton"] > .container::after, [data-theme='dark'] .home .baton-hero > .container::after {
+  [data-theme='dark'] .home section[class*="baton"] > .container::after {
     background: linear-gradient(to left, var(--ifm-background-color) 0%, var(--ifm-background-color) 50%, transparent 100%);
   }
 }
 
-.home section:first-of-type {
-  padding-top: 0;
+.home section.from-the-blog {
+  margin-bottom: 0;
+}
+
+@media (max-width: 995px) {
+  .home section.from-the-blog {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+.home section.from-the-community {
+  margin-top: 0;
+
+}
+
+.home .resource-section h2 {
+  margin: 0;
+}
+
+section>h2:not(.resource-section) {
+  margin-bottom: 25px;
+}
+
+.home .resource-section {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 16px;
+  grid-template-areas:
+    "featH2"
+    "featResource"
+    "popH2"
+    "popResources";
+}
+
+.home .resource-section.has-spotlight-member {
+  grid-template-areas:
+    "popH2"
+    "popResources"
+    "featH2"
+    "featResource";
+}
+
+@media (min-width: 996px) {
+  .home .resource-section {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    row-gap: 25px;
+    column-gap: calc(var(--ifm-spacing-horizontal) * 2);
+    grid-template-areas:
+      "popH2 featH2"
+      "popResources  featResource";
+  }
+
+  .home .resource-section.has-spotlight-member {
+    grid-template-areas:
+      "popH2 featH2"
+      "popResources  featResource";
+  }
+}
+
+.home .popular-header {
+  grid-area: popH2;
+  margin-top: 2.5rem;
+}
+
+@media (min-width: 996px) {
+  .home .popular-header {
+    margin-top: 0;
+  }
+}
+
+.home .swiper .swiper-slide,
+.docswiper .swiper .swiper-slide {
+  height: unset;
+}
+
+.home .swiper.swiper-initialized,
+.docswiper .swiper.swiper-initialized {
+  padding-right: 3rem;
+  padding-left: 3rem;
+  padding-top: 0rem;
+  padding-bottom: 6.25rem;
+  margin-bottom: 0;
+}
+
+.docswiper .swiper.swiper-initialized {
+  padding: 2rem 3rem;
+}
+
+.home .swiper .swiper-button-next,
+.home .swiper .swiper-button-prev {
+  color: #047377;
+  font-weight: 800;
+  position: absolute;
+  top: 40%;
 }
 
 .home-card-grid {
@@ -2432,8 +2523,7 @@ iframe#q-messenger-frame:not(.qlfd-maximized) {
 
 
 .baton-1,
-.baton-2,
-.baton-hero {
+.baton-2 {
   position: relative;
 }
 
@@ -2453,31 +2543,12 @@ iframe#q-messenger-frame:not(.qlfd-maximized) {
   z-index: 0;
 }
 
-.baton-hero::before {
-  content: '';
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
-  max-width: 1460px;
-  height: 100%;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: top;
-  z-index: 0;
-}
-
 .baton-1::before {
   background-image: url('/img/batons/baton-1.png');
 }
 
 .baton-2::before {
   background-image: url('/img/batons/baton-2.png');
-}
-
-.baton-hero::before {
-  background-image: url('/img/batons/baton-hero.png');
 }
 
 @media (min-width: 1460px) {
@@ -2489,71 +2560,9 @@ iframe#q-messenger-frame:not(.qlfd-maximized) {
 
 @media (max-width: 996px) {
   .baton-1::before,
-  .baton-2::before,
-  .baton-hero::before {
+  .baton-2::before {
     background-size: contain;
   }
-}
-
-.baton-hero {
-  text-align: center;
-  padding: 6rem 1rem 20rem;
-}
-
-@media (max-width: 996px) {
-  .baton-hero {
-    padding: 4rem 1rem 6rem;
-  }
-}
-
-.baton-hero .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.hero-search-input input {
-  max-width: 400px;
-  width: 100%;
-  padding: .75rem;
-  height: 48px;
-  margin-top: 1rem;
-  font-family: var(--font-sans);
-  background: var(--bg-neutral-primary-default);
-  border: 1px solid var(--bg-neutral-secondary-default);
-  color: var(--text-neutral-primary);
-  cursor: pointer;
-  border-radius: 12px;
-}
-
-.hero-search-input input:active,
-.hero-search-input input:focus {
-  border: 1px solid var(--bg-neutral-secondary-default) !important;
-  outline: none !important;
-}
-
-.baton-hero .quick-links {
-  display: flex;
-  flex-direction: row;
-  gap: 1rem;
-  margin-top: 2rem;
-  justify-content: center;
-  align-items: center;
-}
-
-.baton-hero .quick-links a {
-  text-decoration: underline;
-  color: var(--text-neutral-primary);
-  font-weight: 500;
-}
-
-.baton-hero .quick-links a:hover {
-  text-decoration: none;
-}
-
-[data-theme='dark'] .baton-hero .quick-links a {
-  color: var(--text-inverse-primary);
 }
 
 .static-bg {
