--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -2381,14 +2381,6 @@ h2.anchor.clicked a.hash-link:before {
   font-weight: 600;
 }
 
-:root {
-    --table-border-color: #000000; /* Light mode table border color */
-}
-
-/* Dark mode border */
-[data-theme="dark"] {
-    --table-border-color: #ddd; /* Dark mode table border color */
-}
 table th {
   color: #ffffff; /* White text on lighter background */
   font-weight: bold;
@@ -2396,8 +2388,11 @@ table th {
 
 /* Dark mode table header text */
 [data-theme='dark'] table th {
-  color: #000000; /* Black text on darker background */
-  font-weight: bold;
+  color: var(--text-inverse-primary);
+}
+
+[data-theme='dark'] .markdown table {
+  border: solid 1px var(--border-inverse-tertiary);
 }
 
 /* Begin tab borders */
