--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -1190,12 +1190,28 @@ html[data-theme="dark"] .blog-breadcrumbs a {
   color: var(--darkmode-link-color);
 }
 
+.breadcrumbs__link {
+  color: var(--text-neutral-primary);
+  background: none !important;
+}
+
+a.breadcrumbs__link:hover {
+  text-decoration: underline !important;
+}
+
+
+
+.breadcrumbs__item--active .breadcrumbs__link, a.breadcrumbs__link {
+  color: var(--text-neutral-primary);
+  background-color: transparent;
+}
+
 html[data-theme="dark"] .breadcrumbs__item--active .breadcrumbs__link {
-  filter: brightness(var(--filter-brightness-high));
+  color: var(--text-inverse-primary);
 }
 
 .blog-breadcrumbs a:not(:last-of-type):after {
-  content: ">";
+  content: "/";
   color: var(--color-neutral-primary);
   position: absolute;
   right: -15px;
