--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -114,6 +114,8 @@ html[data-theme="dark"] {
   /* admonition icon */
   --ifm-color-info-contrast-foreground: var(--ifm-color-gray-900);
   --ifm-table-cell-color: var(--color-green-blue);
+
+  --ifm-link-color: var(--darkmode-link-color);
 }
 
 /* Linked `code` tags visibility adjustment */
@@ -179,12 +181,10 @@ table td {
   vertical-align: top;
 }
 
-html[data-theme=dark] main .row .col:first-of-type a:not(.button) {
-  color: var(--darkmode-link-color);
-}
 
 html[data-theme="dark"] main .row .col:first-of-type a:hover {
-  filter: brightness(var(--filter-brightness-low));
+  text-decoration: underline;
+  color: var(--darkmode-link-color) !important;
 }
 
 html[data-theme="dark"] main .row .col:first-of-type a article * {
@@ -1210,8 +1210,12 @@ html[data-theme="dark"] .breadcrumbs__item--active .breadcrumbs__link {
   color: var(--text-inverse-primary);
 }
 
+html[data-theme="dark"] a.breadcrumbs__link {
+  color: var(--text-inverse-primary);
+}
+
 .blog-breadcrumbs a:not(:last-of-type):after {
-  content: "/";
+  content: ">";
   color: var(--color-neutral-primary);
   position: absolute;
   right: -15px;
