--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -308,6 +308,10 @@ html[data-theme="dark"] .dropdown__menu {
   background-color: #F5F5F5 !important;
 }
 
+html[data-theme="dark"] .dropdown__link:hover, html[data-theme="dark"] .dropdown__link--active {
+  background-color: var(--color-terminal-black-700) !important;
+}
+
 .container.home:nth-child(odd) {
   background: var(--color-off-white);
 }
