--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -1875,7 +1875,7 @@ html[data-theme="dark"] .main-wrapper nav a:active {
   border-radius: 1rem;
   /*position: sticky;*/
   text-align: center;
-  background: var(--color-off-white);
+  background: var(--color-terminal-black-100);
   position: relative;
   bottom: 0;
   max-width: 400px;
@@ -1891,23 +1891,22 @@ html[data-theme="dark"] .main-wrapper nav a:active {
 }
 
 .docs-cta .docs-cta-btn {
-  background: var(--ifm-color-primary);
-  color: var(--color-white);
-  border-radius: 5px;
+  background: var(--color-transform-orange-600);
+  color: var(--text-neutral-primary);
+  border-radius: 12px;
   border: none;
   text-decoration: none;
   padding: 10px 20px;
   transition: 100ms all ease-in-out;
   white-space: nowrap;
-}
-
-.docs-cta .docs-cta-btn:hover {
-  background: var(--ifm-menu-color-active);
+  display: block;
+  max-width: fit-content;
+  margin: 0 auto;
 }
 
 /* CTA dark-mode styles */
 [data-theme='dark'] .docs-cta {
-  background: var(--ifm-navbar-background-color);
+  background: var(--color-terminal-black-800);
 }
 
 @media (max-width: 996px) {
