--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -2403,6 +2403,14 @@ h2.anchor.clicked a.hash-link:before {
   border-radius: 12px;
 }
 
+.markdown table td {
+  border: 1px solid var(--border-neutral-tertiary);
+}
+
+[data-theme='dark'] .markdown table td {
+  border: 1px solid var(--border-inverse-tertiary);
+}
+
 .markdown table th {
   background-color: transparent;
   color: var(--text-neutral-primary);
