adjust left-right padding for slider

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -2139,7 +2139,7 @@ section.discourse-forum-page {
 }
 
 .docswiper .swiper {
-  padding-bottom: 10px;
+  padding: 0 40px 10px;
 }
 
 .docswiper .swiper .swiper-horizontal > .docswiper .swiper .swiper-pagination-bullets, .docswiper .swiper .swiper-pagination-bullets.swiper-pagination-horizontal, .docswiper .swiper .swiper-pagination-custom, .docswiper .swiper .swiper-pagination-fraction {
