adjust lifecycle pill colors

--- a/website/src/components/lifeCycle/styles.module.css
+++ b/website/src/components/lifeCycle/styles.module.css
@@ -1,5 +1,5 @@
 .lifecycle {
-    background-color: #047377; 
+    background-color: #d1d5dc; 
     color: #030711; 
     font-size: 0.8rem; /* Using rem so font size is relative to root */
     font-weight: 600;  /* Normal font weight */
