update link styles

--- a/website/src/components/quickstartTOC/styles.module.css
+++ b/website/src/components/quickstartTOC/styles.module.css
@@ -142,6 +142,7 @@ html[data-theme="dark"] .buttonContainer > a:hover > svg {
 
 .buttonContainer .nextButton {
     margin-left: auto;
+    text-decoration: none;
 }
 
 .buttonContainer .nextButton i {
