--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -118,14 +118,6 @@ html[data-theme="dark"] {
   --ifm-link-color: var(--darkmode-link-color);
 }
 
-/* Linked `code` tags visibility adjustment */
-html[data-theme=dark] a code {
-  color: var(--darkmode-link-color);
-}
-html[data-theme=dark] a code:hover {
-  color: var(--darkmode-link-color);
-}
-
 /* For /dbt-cloud/api REDOC Page */
 html[data-theme="dark"] .api-content h2,
 html[data-theme="dark"] .api-content h3,
@@ -371,8 +363,17 @@ code {
   font-size: var(--text-sm);
 }
 
-.main-wrapper .home .col>p {
-  font-size: 1.25rem;
+a code {
+  color: rgba(61, 24, 154, 1);
+}
+
+.markdown a {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
+.markdown a:hover {
+  text-decoration: none !important;
 }
 
 /* Wish we didn't need to do this... */
