set max-height for guide icons

--- a/website/src/components/quickstartGuideCard/styles.module.css
+++ b/website/src/components/quickstartGuideCard/styles.module.css
@@ -32,6 +32,7 @@
 
 .quickstartCard .icon {
   max-width: 46px;
+  max-height: 46px;
   font-size: 46px;
   margin-bottom: .8rem;
   color: var(--ifm-menu-color);
