update few styles using old teal color

--- a/website/src/components/discourse/styles.module.css
+++ b/website/src/components/discourse/styles.module.css
@@ -57,8 +57,10 @@
   color: #fff;
 }
 .discourseCta:hover {
-  background: var(--color-light-teal);
+  background: var(--ifm-color-primary);
   color: #fff;
+  text-decoration: underline;
+  border-color: var(--ifm-color-primary);
 }
 
 /* Loading icon */
