adjust cta styles for dark mode

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -230,13 +230,22 @@ html[data-theme="dark"] input.sc-avest {
   order: 4;
 }
 
+/* IDE Extension nav item */
 .navbar__item.nav-install-dbt-extension {
   order: 5;
   background: var(--ifm-color-primary);
   transition: all 0.3s ease-in-out;
+  color: var(--color-neutral-primary);
 }
-
 .navbar__item.nav-install-dbt-extension:hover {
+  background-color: var(--ifm-color-primary) !important;
+  background-image: linear-gradient(oklab(0.865972 0.00164044 0.169914 / 0.5) 0%, rgba(0, 0, 0, 0) 50%) !important;
+}
+html[data-theme="dark"] .navbar__item.nav-install-dbt-extension {
+  color: var(--color-neutral-primary);
+}
+html[data-theme="dark"] .navbar__item.nav-install-dbt-extension:hover {
+  color: var(--color-neutral-primary) !important;
   background-color: var(--ifm-color-primary) !important;
   background-image: linear-gradient(oklab(0.865972 0.00164044 0.169914 / 0.5) 0%, rgba(0, 0, 0, 0) 50%) !important;
 }
