--- a/website/src/components/feedback/styles.module.css
+++ b/website/src/components/feedback/styles.module.css
@@ -57,7 +57,7 @@
 /* Submit Button */
 .feedbackContainer .feedbackSubmitButton {
   background: var(--ifm-color-primary);
-  transition: all 0.3s ease-in-out;
+  transition: background-color 0.3s ease, border-color 0.3s ease, color 0.3s ease;
   color: var(--color-neutral-primary);
   border: none;
   border-radius: .75rem;
