--- a/website/src/components/feedback/styles.module.css
+++ b/website/src/components/feedback/styles.module.css
@@ -10,6 +10,11 @@
   margin-bottom: 0;
 }
 
+/* Form Styles */
+.feedbackContainer .feedbackActions {
+  position: relative;
+}
+
 /* Button Styles */
 .feedbackContainer .feedbackButtons {
   display: flex;
@@ -117,10 +122,9 @@ outline-offset: 2px;
 
 /* Submission Status */
 .feedbackContainer .feedbackMessage {
-  margin-bottom: 0;
   font-size: 0.9rem;
-  position: absolute;
-  bottom: -1.6rem;
+  display: block;
+  margin: 1rem 0 0;
 }
 
 /* Additional Links */
