--- a/website/src/components/feedback/styles.module.css
+++ b/website/src/components/feedback/styles.module.css
@@ -125,6 +125,8 @@ outline-offset: 2px;
   font-size: 0.9rem;
   display: block;
   margin: 1rem 0 0;
+  min-height: 33.5px;
+  
 }
 
 /* Additional Links */
