--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -2912,3 +2912,15 @@ iframe#q-messenger-frame:not(.qlfd-maximized) {
   background-color: var(--bg-neutral-primary-hover);
   color: var(--text-neutral-primary);
 }
+
+/* Sidebar Title headers */
+
+.sidebar-title {
+  font-weight: bold;
+  display: block;
+  padding: 8px 0;
+  border-top: 2px solid var(--ifm-color-primary);  /* Line above */
+  border-bottom: 2px solid var(--ifm-color-primary); /* Line below */
+  margin: 12px 0;
+  text-align: center; /* Optional: Center the title */
+}
