--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -2923,6 +2923,7 @@ iframe#q-messenger-frame:not(.qlfd-maximized) {
   border-bottom: 2px solid var(--ifm-color-primary); /* Line below */
   margin: 12px 0;
   text-align: center; /* Optional: Center the title */
+}
 
 /* Hide reCaptcha badge */
 .grecaptcha-badge {
