Updating design and color scheme

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -2919,10 +2919,10 @@ iframe#q-messenger-frame:not(.qlfd-maximized) {
   font-weight: bold;
   display: block;
   padding: 8px 0;
-  border-top: 2px solid var(--ifm-color-primary);  /* Line above */
-  border-bottom: 2px solid var(--ifm-color-primary); /* Line below */
+  border-top: 2px solid var(--color-coalesce-purple-600);  /* Line above */
+  /* border-bottom: 2px solid var(--ifm-color-primary); Line below */
   margin: 12px 0;
-  text-align: center; /* Optional: Center the title */
+  text-align: left; /* Optional: Center the title */
 }
 
 /* Hide reCaptcha badge */
