--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -2916,15 +2916,24 @@ iframe#q-messenger-frame:not(.qlfd-maximized) {
 /* Sidebar Title headers */
 
 .sidebar-title {
-  font-weight: bold;
+  font-weight: var(--ifm-font-weight-semibold);
   display: block;
+  opacity: 90%;
   padding: 8px 0;
-  border-top: 2px solid var(--color-coalesce-purple-100);  /* Line above */
-  /* border-bottom: 2px solid var(--ifm-color-primary); Line below */
   margin: 12px 0;
   text-align: left; /* Optional: Center the title */
 }
 
+/* Light mode */
+html[data-theme='light'] .sidebar-title {
+  border-top: 1px solid var(--color-nav-text); /* lighter border for light mode */
+}
+
+/* Dark mode */
+html[data-theme='dark'] .sidebar-title {
+  border-top: 1px solid var(--color-nav-text); /* white border for dark mode */
+  color: var(--text-inverse-primary);
+}
 /* Hide reCaptcha badge */
 .grecaptcha-badge {
   display: none;
